# cpp-interface-coppeliasim-branched-robots

./: CMakeLists.txt  README.md
cmake/: dmc-interface-coppeliasim-config.cmake
include/dmc-interface-coppeliasim/interfaces/coppeliasim/legacy_api/: DQ_BranchedCoppeliaSimLegacyRobot.h
include/dmc-interface-coppeliasim/interfaces/coppeliasim/legacy_api/robots/: LBR4pCoppeliaSimLegacyRobot.h  LBR4pVrepRobotDynamics.h
include/dqdynamics/interfaces/coppeliasim/legacy_api/robots/: LBR4pCoppeliaSimLegacyRobot.h
include/dqdynamics/interfaces/coppeliasim/zmq/: DQ_BranchedCoppeliaSimZMQRobot.h
include/dqdynamics/interfaces/coppeliasim/zmq/robots/: B1CoppeliaSimZMQRobot.h  B1LegCoppeliaSimZMQ.h  BM_TRO2023CoppeliaSimZMQRobot.h  FreeFlyingCoppeliaSimZMQRobot.h  HexapodCoppeliaSimZMQRobot.h  HexapodLegCoppeliaSimZMQ.h  LBR4pCoppeliaSimZMQRobot.h
include/dqdynamics/utils/: ButterworthFilter.h  NumericalDifferentiation.h  math.h
src/dqdynamics/interfaces/coppeliasim/legacy_api/: DQ_BranchedCoppeliaSimLegacyRobot.cpp
src/dqdynamics/interfaces/coppeliasim/legacy_api/robots/: LBR4pCoppeliaSimLegacyRobot.cpp
src/dqdynamics/interfaces/coppeliasim/zmq/: DQ_BranchedCoppeliaSimZMQRobot.cpp
src/dqdynamics/interfaces/coppeliasim/zmq/robots/: B1CoppeliaSimZMQRobot.cpp  B1LegCoppeliaSimZMQ.cpp  BM_TRO2023CoppeliaSimZMQRobot.cpp  FreeFlyingCoppeliaSimZMQRobot.cpp  HexapodCoppeliaSimZMQRobot.cpp  HexapodLegCoppeliaSimZMQ.cpp  LBR4pCoppeliaSimZMQRobot.cpp
src/dqdynamics/utils/: ButterworthFilter.cpp  NumericalDifferentiation.cpp  math.cpp
src/interfaces/coppeliasim/legacy_api/: DQ_BranchedCoppeliaSimLegacyRobot.cpp
src/interfaces/coppeliasim/legacy_api/robots/: LBR4pCoppeliaSimLegacyRobot.cpp  LBR4pVrepRobotDynamics.cpp
